Add support for IceStream online audio streams.

--- a/OnlineRadio.CommandLine/OnlineRadio.CommandLine.csproj
+++ b/OnlineRadio.CommandLine/OnlineRadio.CommandLine.csproj
@@ -46,6 +46,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OnlineRadio.Core\OnlineRadio.Core.csproj">
+      <Project>{5CBFAA75-D27E-45CE-9063-793DED2225C6}</Project>
+      <Name>OnlineRadio.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
