Add basic implementation of plugin system.

--- a/OnlineRadio.Core/OnlineRadio.Core.csproj
+++ b/OnlineRadio.Core/OnlineRadio.Core.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPlugin.cs" />
+    <Compile Include="PluginManager.cs" />
     <Compile Include="Radio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
