--- a/OnlineRadio.Plugins.Audio/OnlineRadio.Plugins.Audio.csproj
+++ b/OnlineRadio.Plugins.Audio/OnlineRadio.Plugins.Audio.csproj
@@ -34,8 +34,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NAudio">
-      <HintPath>..\packages\NAudio.1.7-alpha03\lib\net35\NAudio.dll</HintPath>
+    <Reference Include="NAudio, Version=1.7.0.10, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NAudio.1.7-alpha04\lib\net35\NAudio.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
