--- a/OnlineRadio.GUI/OnlineRadio.GUI.csproj
+++ b/OnlineRadio.GUI/OnlineRadio.GUI.csproj
@@ -60,6 +60,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Source.cs" />
     <Compile Include="SourceWindow.xaml.cs">
       <DependentUpon>SourceWindow.xaml</DependentUpon>
     </Compile>
