Handle Play/Stop
Handle Play/Stop buttons, showing the current song Artist - Title in the Window title and in the info labels.

--- a/OnlineRadio.GUI/OnlineRadio.GUI.csproj
+++ b/OnlineRadio.GUI/OnlineRadio.GUI.csproj
@@ -108,6 +108,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OnlineRadio.Core\OnlineRadio.Core.csproj">
+      <Project>{5cbfaa75-d27e-45ce-9063-793ded2225c6}</Project>
+      <Name>OnlineRadio.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
