Change plugins folders
Change plugins output folders to OnlineRadio.GUI which replaces OnlineRadio.CommandLine as startup project.

--- a/OnlineRadio.Plugins.Audio/OnlineRadio.Plugins.Audio.csproj
+++ b/OnlineRadio.Plugins.Audio/OnlineRadio.Plugins.Audio.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\OnlineRadio.CommandLine\bin\Debug\plugins\</OutputPath>
+    <OutputPath>..\OnlineRadio.GUI\bin\Debug\plugins\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -27,7 +27,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\OnlineRadio.CommandLine\bin\Release\plugins\</OutputPath>
+    <OutputPath>..\OnlineRadio.GUI\bin\Release\plugins\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
