--- a/OnlineRadio.Core/OnlineRadio.Core.csproj
+++ b/OnlineRadio.Core/OnlineRadio.Core.csproj
@@ -34,16 +34,21 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IPlugin.cs" />
+    <Compile Include="IVisualPlugin.cs" />
     <Compile Include="PluginManager.cs" />
     <Compile Include="Radio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
