Fix project dependency
Skype plugin doesn't copy anymore OnlineRadio.Core.dll locally in the plugin folder.

--- a/OnlineRadio.Plugins.Skype/OnlineRadio.Plugins.Skype.csproj
+++ b/OnlineRadio.Plugins.Skype/OnlineRadio.Plugins.Skype.csproj
@@ -46,6 +46,7 @@
     <ProjectReference Include="..\OnlineRadio.Core\OnlineRadio.Core.csproj">
       <Project>{5cbfaa75-d27e-45ce-9063-793ded2225c6}</Project>
       <Name>OnlineRadio.Core</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
