Add Play/Stop buttons in Win7+ taskbar

--- a/OnlineRadio.GUI/OnlineRadio.GUI.csproj
+++ b/OnlineRadio.GUI/OnlineRadio.GUI.csproj
@@ -115,6 +115,11 @@
       <Name>OnlineRadio.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\play.png" />
+    <Resource Include="Resources\stop.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
