--- a/OnlineRadio.Plugins.Audio/OnlineRadio.Plugins.Audio.csproj
+++ b/OnlineRadio.Plugins.Audio/OnlineRadio.Plugins.Audio.csproj
@@ -1,70 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{810E32CA-D344-48BA-BFF2-ED89C46FDC66}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OnlineRadio.Plugins.Audio</RootNamespace>
-    <AssemblyName>OnlineRadio.Plugins.Audio</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
+    <TargetFramework>net46</TargetFramework>
+    <AssemblyTitle>OnlineRadio.Plugins.Audio</AssemblyTitle>
+    <Product>OnlineRadio.Plugins.Audio</Product>
+    <Copyright>Copyright ©  2012</Copyright>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\OnlineRadio.GUI\bin\Debug\plugins\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\OnlineRadio.GUI\bin\Release\plugins\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <OutputPath>..\OnlineRadio.GUI\bin\$(Configuration)\plugins\</OutputPath>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AudioPlugin.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <ProjectReference Include="..\OnlineRadio.Core\OnlineRadio.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OnlineRadio.Core\OnlineRadio.Core.csproj">
-      <Project>{5CBFAA75-D27E-45CE-9063-793DED2225C6}</Project>
-      <Name>OnlineRadio.Core</Name>
-      <Private>False</Private>
-    </ProjectReference>
+    <PackageReference Include="NAudio" Version="1.9.0" />
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="NAudio">
-      <Version>1.9.0</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
