--- a/OnlineRadio.Core/OnlineRadio.Core.csproj
+++ b/OnlineRadio.Core/OnlineRadio.Core.csproj
@@ -8,6 +8,7 @@
     <DebugType>full</DebugType>
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <DebugSymbols>true</DebugSymbols>
+	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
