--- a/OnlineRadio.GUI/OnlineRadio.GUI.csproj
+++ b/OnlineRadio.GUI/OnlineRadio.GUI.csproj
@@ -10,6 +10,7 @@
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <UseWPF>true</UseWPF>
     <DebugSymbols>true</DebugSymbols>
+	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
