--- a/OnlineRadio.Plugins.Lyrics/OnlineRadio.Plugins.Lyrics.csproj
+++ b/OnlineRadio.Plugins.Lyrics/OnlineRadio.Plugins.Lyrics.csproj
@@ -8,6 +8,7 @@
     <DebugType>full</DebugType>
     <OutputPath>..\OnlineRadio.GUI\bin\$(Configuration)\plugins\</OutputPath>
     <DebugSymbols>true</DebugSymbols>
+	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
