--- a/OnlineRadio.Plugins.Lyrics/OnlineRadio.Plugins.Lyrics.csproj
+++ b/OnlineRadio.Plugins.Lyrics/OnlineRadio.Plugins.Lyrics.csproj
@@ -25,7 +25,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OnlineRadio.Core\OnlineRadio.Core.csproj" />
+    <ProjectReference Include="..\OnlineRadio.Core\OnlineRadio.Core.csproj">
+      <Private>false</Private>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Page Include="LyricsPlugin.xaml">
