--- a/OnlineRadio.Plugins.Lyrics/app.config
+++ b/OnlineRadio.Plugins.Lyrics/app.config
@@ -3,4 +3,4 @@
   <appSettings>
     <add key="apikey" value="Add your api key here"/>
   </appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup></configuration>
+</configuration>
