--- a/OnlineRadio.CommandLine/OnlineRadio.CommandLine.csproj
+++ b/OnlineRadio.CommandLine/OnlineRadio.CommandLine.csproj
@@ -5,7 +5,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>OnlineRadio.Console</RootNamespace>
     <AssemblyName>OnlineRadio.Console</AssemblyName>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <AssemblyTitle>OnlineRadio.Console</AssemblyTitle>
     <Product>OnlineRadio.Console</Product>
     <Copyright>Copyright ©  2012</Copyright>
